# locness-drifter-qaqc

./: .gitignore  README.md  aquatroll_parser.py  drifter_qc_plots.py  fluorometer_parser.py  gpx_parser.py  main.py  pyproject.toml  quick_join.py
data/: drifter_metadata.csv
