[project]
name = "locness-drifter-qaqc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.41.0",
    "gpxpy>=1.6.2",
    "marimo>=0.16.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "prefect>=3.4.21",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
]
